ajuste de pergiunta

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         // --- SEÇÃO DE PERGUNTAS ---
         const myQuestions = [
             { question: "Qual é a minha comida favorita que eu comeria todos os dias sem enjoar?", options: ["Pizza", "Hambúrguer", "Lasanha da Minha Mãe", "Açaí"], answer: "Pizza" },
-            { question: "Qual o nome que eu daria para a nossa planta de estimação imaginária?", options: ["Clorofilson", "Jurema", "Samambaeu", "Alface Armstrong"], answer: "Alface Armstrong" },
+            { question: "Qual foi o primeiro filme que 'assistimos' ?", options: ["A branca de Neve", "Vingadores", "Coringa", "Senhor do Aneis"], answer: "Coringa" },
             { question: "Qual o meu maior defeito?", options: ["Sou teimoso", "Deixo a toalha na cama", "Ser perfeito demais (atrapalha)", "Ronco um pouquinho"], answer: "Ser perfeito demais (atrapalha)", type: 'funny' },
             { question: "Quem ama mais?", options: ["JonJon", "Princesa"], answer: "JonJon", type: 'trick' },
             { question: "Qual a densidade (ρ) do amor exercida pela pressão (P) dos meus lábios nos seus, considerando uma força (F) de 5N numa área (A) de 0,0004 m²?", options: ["ρ = 12500 kg/m³", "7.2 GigaPascals de carinho", "É maior que a de um buraco negro", "Infinita e imensurável"], answer: "Infinita e imensurável" },
